# ublock-chrome

./: README.md  pyproject.toml
homebrew-tap/Formula/: ublock-chrome.rb
ublock_chrome/: __init__.py  __main__.py  cli.py
