[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ublock-chrome"
version = "1.0.0"
description = "One-command installer for uBlock Origin on Chrome (macOS). Downloads uBlock Origin, creates a launcher app with MV2 flags, and auto-loads the extension."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["ublock", "chrome", "adblock", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]

[project.scripts]
ublock-chrome = "ublock_chrome.cli:main"

[tool.setuptools.packages.find]
include = ["ublock_chrome*"]
